--- a/ex2.css
+++ b/ex2.css
@@ -1,16 +1,107 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Holtwood+One+SC&display=swap');
 
 body {
+    font-family: Arial, sans-serif;
     font-family: 'Holtwood One SC';
     font-size: xx-large;
+    color: rgb(230, 160, 189);
     background-image: url("https://img.freepik.com/free-vector/gradient-geometric-design-dark-background_23-2148425667.jpg?t=st=1739254118~exp=1739257718~hmac=d903f4f3fe38e4bb6c0ed250282226b2c65a476bda4efdc996e3b1c0fdb5a1a4&w=1060");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-} 
-  h1 {
-    color: rgb(204, 191, 218);
-  }
-  p {
-    color: rgb(191, 141, 157);
-  }
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #f4f4f4;
+    padding: 10px;
+    text-align: center;
+    border-bottom: 2px solid #ccc;
+}
+
+.logo {
+    background: black;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.nav-bar {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.container {
+    width: 90%;
+    margin: 20px auto;
+}
+
+.featured-photo .photo {
+    width: 100%;
+    height: 200px;
+    background: lightgray;
+    border: 2px solid black;
+}
+
+.projects h2, .skills h2, .autobiography h2 {
+    text-align: center;
+    margin: 15px 0;
+}
+
+.project-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.project {
+    width: 23%;
+    height: 100px;
+    background: lightgray;
+    border: 3px solid black;
+}
+
+.skills-autobiography {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.skills, .autobiography {
+    width: 48%;
+}
+
+.content-box {
+    width: 100%;
+    height: 100px;
+    background: lightgray;
+    border: 2px solid black;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    background: #f4f4f4;
+    padding: 10px;
+    margin-top: 20px;
+    border-top: 2px solid #ccc;
+}
+
+.footer-logo {
+    width: 80px;
+    height: 50px;
+    background: lightgray;
+    border: 2px solid black;
+}
+
+.footer-content {
+    flex-grow: 1;
+    padding-left: 20px;
+}
+
+.back-to-top {
+    color: blue;
+    text-decoration: none;
+    font-weight: bold;
+}
